--- a/iframe-carousel-r3.html
+++ b/iframe-carousel-r3.html
@@ -10,19 +10,19 @@
 
 	var interval = 15000;
 	var timer;
-	var editor = 'http://jaanga.github.io/cookbook-html/templates/code-edit-view/code-edit-view-r2.html#';
+	var editor = 'https://jaanga.github.io/cookbook-html/templates/code-edit-view/code-edit-view-r2.html#';
 	var sites = [
 
-		['Moon Voyager Gamer', editor + 'http://jaanga.github.io/moon/voyager/gamer/moon-voyager-gamer-r2-2.html' ],
-		['Moon Voyager Image Map', editor + 'http://jaanga.github.io/moon/voyager/image-map/moon-voyager-image-map-r1-2.html' ],
-		['Moon Voyager Shaded', editor + 'http://jaanga.github.io/moon/voyager/shaded/moon-voyager-shaded-r1-1.html' ],
-		['Moon Voyager Altitude', editor + 'http://jaanga.github.io/moon/voyager/altitude/moon-voyager-altitude-r1-1.html' ],
-		['Moon Voyager Satellite', editor + 'http://jaanga.github.io/moon/voyager/satellites/moon-voyager-satellites-r1.html' ],
-		['Moon Voyager Sun Earth Moon', editor + 'http://jaanga.github.io/moon/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html' ],
+		['Moon Voyager Gamer', editor + 'https://jaanga.github.io/moon/voyager/gamer/moon-voyager-gamer-r2-2.html' ],
+		['Moon Voyager Image Map', editor + 'https://jaanga.github.io/moon/voyager/image-map/moon-voyager-image-map-r1-2.html' ],
+		['Moon Voyager Shaded', editor + 'https://jaanga.github.io/moon/voyager/shaded/moon-voyager-shaded-r1-1.html' ],
+		['Moon Voyager Altitude', editor + 'https://jaanga.github.io/moon/voyager/altitude/moon-voyager-altitude-r1-1.html' ],
+		['Moon Voyager Satellite', editor + 'https://jaanga.github.io/moon/voyager/satellites/moon-voyager-satellites-r1.html' ],
+		['Moon Voyager Sun Earth Moon', editor + 'https://jaanga.github.io/moon/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html' ],
 
-		['Moon Rover Mobile', editor + 'http://jaanga.github.io/moon/rover-mobile/moon-rover-mobile-r5-4.html' ],
-		['Moon Rover 64P', editor + 'http://jaanga.github.io/moon/rover-64p/moon-rover-64p-multi-tile-r2.html' ],
-		['Moon Rover 256P', editor + 'http://jaanga.github.io/moon/rover-256p/moon-rover-256p-multi-tile-r1.html' ]
+		['Moon Rover Mobile', editor + 'https://jaanga.github.io/moon/rover-mobile/moon-rover-mobile-r5-4.html' ],
+		['Moon Rover 64P', editor + 'https://jaanga.github.io/moon/rover-64p/moon-rover-64p-multi-tile-r2.html' ],
+		['Moon Rover 256P', editor + 'https://jaanga.github.io/moon/rover-256p/moon-rover-256p-multi-tile-r1.html' ]
 
 	]
 
