--- a/gazetteer/moon-gazetteer-display-v-0-1-0.html
+++ b/gazetteer/moon-gazetteer-display-v-0-1-0.html
@@ -6,9 +6,9 @@
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<script src=http://mrdoob.github.io/three.js/build/three.min.js ></script>
-<script src=http://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
-<script src=http://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
+<script src=https://mrdoob.github.io/three.js/build/three.min.js ></script>
+<script src=https://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
+<script src=https://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
 <script>
 
 	var image = 'Lunar_Clementine_UVVIS_750nm_Global_Mosaic_1.2km.jpg'; // 9216 x 4608
@@ -42,7 +42,7 @@
 		menu = document.body.appendChild( document.createElement( 'div' ) );
 		menu.style.cssText = 'margin: 0 20px; position: absolute; ';
 		menu.innerHTML = '<h2 style=margin:0; ><a href="" >' + document.title + '</a> ' +
-			'<a id=i href=http://jaanga.github.io/ >&#x24D8;</a></h2>' +
+			'<a id=i href=https://jaanga.github.io/ >&#x24D8;</a></h2>' +
 			'<div id=info ></div>' +
 		'';
 
@@ -208,7 +208,7 @@
 
 	}
 
-	function v( x, y, z){ return new THREE.Vector3( x, y, z ); } 
+	function v( x, y, z){ return new THREE.Vector3( x, y, z ); }
 
 	function animate() {
 
