--- a/iframe-carousel-r2.html
+++ b/iframe-carousel-r2.html
@@ -10,7 +10,7 @@
 
 	var interval = 20000;
 	var timer;
-	var editor = 'http://exploratoria.github.io/lib/code-edit-view/code-edit-view.html#';
+	var editor = 'https://exploratoria.github.io/lib/code-edit-view/code-edit-view.html#';
 	var sites = [
 
 		['Moon Voyager Gamer', editor + 'https://jaanga.github.io/moon/voyager/gamer/moon-voyager-gamer-r2-1.html' ],
@@ -37,7 +37,7 @@
 		'';
 
 		var content = document.body.appendChild( document.createElement( 'div' ) );
-		content.innerHTML = 
+		content.innerHTML =
 			'<iframe id=ifr width=100% height=' + ( window.innerHeight - 50 ) + 'px ></iframe>' +
 			'<center><p id=buttons ></p></center>' +
 		'';
@@ -47,9 +47,9 @@
 			button = buttons.appendChild( document.createElement( 'button' ) );
 			button.innerHTML = sites[ i ][ 0 ];
 			button.id = i;
-			button.onclick = function(){ 
+			button.onclick = function(){
 
-				ifr.src = sites[ this.id ][ 1 ]; 
+				ifr.src = sites[ this.id ][ 1 ];
 				clearInterval( timer );
 			};
 
