--- a/rover-256p/moon-rover-256p-multi-tile-r1.html
+++ b/rover-256p/moon-rover-256p-multi-tile-r1.html
@@ -6,12 +6,12 @@
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<script src=http://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
-	var path = 'http://jaanga.github.io/';
+	var path = 'https://jaanga.github.io/';
 
 	var gazetteerFile = path + 'moon/gazetteer/moon-iau-nomenclature.csv';
 	var gazetteer;
@@ -79,7 +79,7 @@
 		menu.style.cssText = ' background-color: #eee; border: 1px #ccc solid; left: -300px;  max-height: ' + ( window.innerHeight - 50 ) + 'px; ' +
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; width: 260px; ';
 		menu.innerHTML = '<h2 style=margin:0; ><a href="" >' + document.title + '</a> ' +
-			'<a id=i href=http://jaanga.github.io/moon/rover-256p/ >&#x24D8;</a></h2>' +
+			'<a id=i href=https://jaanga.github.io/moon/rover-256p/ >&#x24D8;</a></h2>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p>' +
 				'<button onclick=controls.reset(); >Zoom All</button> ' +
@@ -177,7 +177,7 @@
 
 		tile.onload = function() {
 
-			heightmapContext.drawImage( tile, 0, 0, widthDestination, heightDestination, ( x - tileXStart ) * widthDestination, ( 4 - y + tileYStart ) * heightDestination, widthDestination, heightDestination ); 
+			heightmapContext.drawImage( tile, 0, 0, widthDestination, heightDestination, ( x - tileXStart ) * widthDestination, ( 4 - y + tileYStart ) * heightDestination, widthDestination, heightDestination );
 
 			processTiles();
 
@@ -262,10 +262,10 @@
 
 		function callbackGazetteer() {
 
-			if ( xmlHttp.readyState != 4  ) { 
+			if ( xmlHttp.readyState != 4  ) {
 
 				places.innerHTML += '.';
-				return; 
+				return;
 
 			}
 
@@ -310,7 +310,7 @@
 
 			}
 
-			checkoutPlace(); 
+			checkoutPlace();
 
 		}
 
