--- a/rover-64p/crop-img/moon-rover-64p-crop-img-r1.html
+++ b/rover-64p/crop-img/moon-rover-64p-crop-img-r1.html
@@ -7,9 +7,9 @@
 
 </head>
 <body>
-<script src=http://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
 	var startTime = Date.now();
@@ -47,7 +47,7 @@
 		menu = document.body.appendChild( document.createElement( 'div' ) );
 		menu.style.cssText = 'margin: 0 20px; position: absolute; ';
 		menu.innerHTML = '<h2 style=margin:0; ><a href="" >' + document.title + '</a> ' +
-			'<a id=aa href=http://jaanga.github.io/ >&#x24D8;</a></h2>' +
+			'<a id=aa href=https://jaanga.github.io/ >&#x24D8;</a></h2>' +
 			'<div id=info ></div>' +
 		'';
 
