--- a/utilities/img-data-parser/img-read-first-line.html
+++ b/utilities/img-data-parser/img-read-first-line.html
@@ -24,7 +24,7 @@
 //	var fileName = path + 'WAC_GLD100_E300N1350_256P.IMG';
 
 // No CORS access ;-(
-//	var fileName = 'http://lroc.sese.asu.edu/data/LRO-L-LROC-5-RDR-V1.0/LROLRC_2001/DATA/SDP/WAC_GLD100/WAC_GLD100_E300N0450_100M.IMG';
+//	var fileName = 'https://lroc.sese.asu.edu/data/LRO-L-LROC-5-RDR-V1.0/LROLRC_2001/DATA/SDP/WAC_GLD100/WAC_GLD100_E300N0450_100M.IMG';
 
 	var xmlHttp;
 
