--- a/utilities/img-viewer-2d-moon.html
+++ b/utilities/img-viewer-2d-moon.html
@@ -9,7 +9,7 @@
 <script>
 
 	var path = 'c:/temp/moon-heightmaps/'; // for developing etc
-//	var path = 'http://jaanga.github.io/';
+//	var path = 'https://jaanga.github.io/';
 
 	var info, stats, renderer, scene, camera, controls;
 	var geometry, material, mesh;
