--- a/rover-64p/moon-rover-64p-multi-tile-r1-00.html
+++ b/rover-64p/moon-rover-64p-multi-tile-r1-00.html
@@ -6,13 +6,13 @@
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<script src=http://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
 // Enable the script to operate within an iframe, make URLs fixed - otherwise set to relative
-	var sourceFolder = window.self === window.top ? '../' : 'http://jaanga.github.io/moon/';
+	var sourceFolder = window.self === window.top ? '../' : 'https://jaanga.github.io/moon/';
 
 	var heightMapsFolder = sourceFolder + 'heightmaps/64p/'
 	var name = '/64p-';
@@ -59,7 +59,7 @@
 		menu.style.cssText = ' background-color: #eee; border: 1px #ccc solid; left: -300px;  max-height: ' + ( window.innerHeight - 50 ) + 'px; ' +
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; width: 260px; ';
 		menu.innerHTML = '<h2 style=margin:0; ><a href="" >' + document.title + '</a> ' +
-			'<a id=i href=http://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
+			'<a id=i href=https://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
 			'<p>Use cursor keys to move over terrain</p>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p>' +
@@ -122,7 +122,7 @@
 
 			}
 
-		} 
+		}
 
 //		heightmapWindow = document.createElement( 'img' );
 //		document.body.appendChild( heightmapWindow );
@@ -160,7 +160,7 @@
 
 			}
 
-		} 
+		}
 
 	}
 
