--- a/rover-64p/moon-rover-64p-multi-tile-r1-1.html
+++ b/rover-64p/moon-rover-64p-multi-tile-r1-1.html
@@ -6,13 +6,13 @@
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<script src=http://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
 // Enable the script to operate within an iframe, make URLs fixed - otherwise set to relative
-	var sourceFolder = window.self === window.top ? '../' : 'http://jaanga.github.io/moon/';
+	var sourceFolder = window.self === window.top ? '../' : 'https://jaanga.github.io/moon/';
 
 	var gazetteerFile = sourceFolder + 'gazetteer/moon-iau-nomenclature.csv';
 	var gazetteer;
@@ -67,7 +67,7 @@
 		menu.style.cssText = ' background-color: #eee; border: 1px #ccc solid; left: -300px;  max-height: ' + ( window.innerHeight - 50 ) + 'px; ' +
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; width: 260px; ';
 		menu.innerHTML = '<h2 style=margin:0; ><a href="" >' + document.title + '</a> ' +
-			'<a id=i href=http://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
+			'<a id=i href=https://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
 			'<p>Use cursor keys to move over terrain</p>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p>' +
@@ -138,7 +138,7 @@
 
 			}
 
-		} 
+		}
 
 		getCoordinates( latDefault, lonDefault);
 
@@ -160,7 +160,7 @@
 		pt = latlon2xy( lat, lon );
 //console.log( 'lat', lat, 'lon', lon, '\n', 'centerX', pt[ 0 ], 'centerZ', pt[ 1 ]  );
 
-		pt2 = xz2latlon( pt[ 0 ], pt[ 1 ] ) 
+		pt2 = xz2latlon( pt[ 0 ], pt[ 1 ] )
 
 console.log( '\nlat', lat, 'lon', lon, '\ncenterX', pt[ 0 ], 'centerZ', pt[ 1 ], '\nlat', pt2[ 0 ], 'lon', pt2[ 1 ] );
 
@@ -181,7 +181,7 @@ console.log( '\nlat', lat, 'lon', lon, '\ncenterX', pt[ 0 ], 'centerZ', pt[ 1 ],
 
 		if ( z > 22 ) {
 
-			lat = 90 - ( 4 * ( z - 1 ) ); 
+			lat = 90 - ( 4 * ( z - 1 ) );
 
 		} else {
 
@@ -215,7 +215,7 @@ console.log( '\nlat', lat, 'lon', lon, '\ncenterX', pt[ 0 ], 'centerZ', pt[ 1 ],
 
 			}
 
-		} 
+		}
 
 	}
 
@@ -320,7 +320,7 @@ getCoordinates( place[ 2 ], place[ 3 ]  );
 //				drawSprite( nextPlace[ 0 ], 0.15, 120, nextPlace[ 2 ] - 0.5 * mapWidth, placardYPosition, nextPlace[ 3 ] - 0.5 * mapHeight);
 
 				//butZoomIn.onclick();
-//controls.reset(); 
+//controls.reset();
 
 			};
 
