--- a/rover-64p/moon-rover-64p-r1-2.html
+++ b/rover-64p/moon-rover-64p-r1-2.html
@@ -6,13 +6,13 @@
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<script src=http://rawgit.com/mrdoob/three.js/r72/build/three.min.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/r72/build/three.min.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src=https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
 // Enable the script to operate within an iframe, make URLs fixed - otherwise set to relative
-	var sourceFolder = window.self === window.top ? '../' : 'http://jaanga.github.io/moon/';
+	var sourceFolder = window.self === window.top ? '../' : 'https://jaanga.github.io/moon/';
 
 //	var gazetteerFile = sourceFolder + 'moon-gazetteer/moon-100-9216x4608.csv';
 //	var gazetteerFile = sourceFolder + 'moon-gazetteer/moon-100-5760x2880.csv';
@@ -21,9 +21,9 @@
 //	var mapImage = sourceFolder + 'moon-images/Moonmap_from_clementine_data.png'; // 1440 x 720
 //	var mapImage = sourceFolder + 'moon-images/WAC_GLD100_E000N1800_008P.jpg'; // 1440 x 720
 //	var mapImage = sourceFolder + 'moon-images/Lunar_Clementine_UVVIS_750nm_Global_Mosaic_1.2km.jpg'; // 9216 x 4608
-//	var mapImage = sourceFolder + 'moon-images/moon_8k_color_brim16.jpg'; // 8192 x 4096 http://laps.noaa.gov/albers/sos/moon/moon_8k_color_brim16.jpg
-	var mapImage = sourceFolder + 'images/moon_8k_color_brim16_4096x2048.jpg'; // http://laps.noaa.gov/albers/sos/moon/moon_8k_color_brim16.jpg
-//	var mapImage = sourceFolder + 'moon-images/moon_8k_color_brim16_2880x1440.jpg'; // http://laps.noaa.gov/albers/sos/moon/moon_8k_color_brim16.jpg
+//	var mapImage = sourceFolder + 'moon-images/moon_8k_color_brim16.jpg'; // 8192 x 4096 https://laps.noaa.gov/albers/sos/moon/moon_8k_color_brim16.jpg
+	var mapImage = sourceFolder + 'images/moon_8k_color_brim16_4096x2048.jpg'; // https://laps.noaa.gov/albers/sos/moon/moon_8k_color_brim16.jpg
+//	var mapImage = sourceFolder + 'moon-images/moon_8k_color_brim16_2880x1440.jpg'; // https://laps.noaa.gov/albers/sos/moon/moon_8k_color_brim16.jpg
 
 //	var heightmapImage = sourceFolder + 'moon-images/LALT_GGT_MAP.jpg'; // 5770 x 2880
 //	var heightmapImage = sourceFolder + 'moon-images/WAC_GLD100_E000N1800_016P.png'; // 5770 x 2880
@@ -98,7 +98,7 @@
 		menu.style.cssText = ' background-color: #eee; border: 1px #ccc solid; left: -300px;  max-height: ' + ( window.innerHeight - 50 ) + 'px; ' +
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; width: 260px; ';
 		menu.innerHTML = '<h2 style=margin:0; ><a href="" >' + document.title + '</a> ' +
-			'<a id=i href=http://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
+			'<a id=i href=https://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
 			'<p>Use cursor keys to move over terrain</p>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p>' +
