--- a/voyager/image-map/moon-voyager-image-map-r1-1.html
+++ b/voyager/image-map/moon-voyager-image-map-r1-1.html
@@ -6,13 +6,13 @@
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<script src = http://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
 // Enable the script to operate within an iframe, make URLs fixed - otherwise set to relative
-	var sourceFolder = window.self === window.top ? '../../' : 'http://jaanga.github.io/moon/';
+	var sourceFolder = window.self === window.top ? '../../' : 'https://jaanga.github.io/moon/';
 
 	var gazetteerFile = sourceFolder + 'gazetteer/lunar-100-the-moon-wikispaces.csv';
 
@@ -71,7 +71,7 @@
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; max-width: 200px; ';
 		menu.innerHTML = '<h3>' +
 				'<a href="" >' + document.title + '</a> ' +
-				'<a id=i href=http://jaanga.github.io/moon/voyager/image-map/ >&#x24D8;</a>' +
+				'<a id=i href=https://jaanga.github.io/moon/voyager/image-map/ >&#x24D8;</a>' +
 			'</h3>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p id=message ></p>' +
@@ -129,7 +129,7 @@
 
 			fileName = location.hash.substr( 1 );
 
-		} else { 
+		} else {
 
 			fileName = '../../images/TSE_1925_NYC_SL_TopographicMapLunarLimb-cropped.png';
 
