--- a/voyager/satellites/moon-voyager-satellites-r1.html
+++ b/voyager/satellites/moon-voyager-satellites-r1.html
@@ -7,17 +7,17 @@
 </head>
 <body>
 <!--
-<script src=http://mrdoob.github.io/three.js/build/three.min.js ></script>
-<script src=http://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
-<script src=http://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
+<script src=https://mrdoob.github.io/three.js/build/three.min.js ></script>
+<script src=https://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
+<script src=https://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
 -->
-<script src = http://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/loaders/STLLoader.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/loaders/STLLoader.js ></script>
 <script>
 
-	var sourceFolder = 'http://jaanga.github.io/moon/';
+	var sourceFolder = 'https://jaanga.github.io/moon/';
 
 	var heightMapSource = sourceFolder + 'heightmaps/WAC_GLD100_E000N1800_004P.png';
 
@@ -73,7 +73,7 @@
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; max-width: 200px; ';
 		menu.innerHTML = '<h3>' +
 				'<a href="" >' + document.title + '</a> ' +
-				'<a id=i href=http://jaanga.github.io/moon/voyager/satellites/ >&#x24D8;</a>' +
+				'<a id=i href=https://jaanga.github.io/moon/voyager/satellites/ >&#x24D8;</a>' +
 			'</h3>' +
 			'<p id=message ></p>' +
 			'<p>Vertical Scale <input type=range id=inpScale min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;updateTerrain(); /></p>' +
@@ -155,7 +155,7 @@
 
 	function loadFileSTLByURL( fileName ) {
 
-// http:///jaanga.github.io/cookbook-threejs/viewers/viewer-stl/latest/#http://va3c.github.io/viewer/samples/NPP_16.stl
+// https:///jaanga.github.io/cookbook-threejs/viewers/viewer-stl/latest/#https://va3c.github.io/viewer/samples/NPP_16.stl
 
 		var loader = new THREE.STLLoader();
 		loader.crossOrigin = 'anonymous';
