--- a/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html
+++ b/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <!--
-http://gamingjs.com/ice/#
-<script src="http://gamingJS.com/Three.js"></script>
+https://gamingjs.com/ice/#
+<script src="https://gamingJS.com/Three.js"></script>
 -->
-<script src = http://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
-	var sourceFolder = 'http://jaanga.github.io/moon/';
+	var sourceFolder = 'https://jaanga.github.io/moon/';
 
 	var heightMapSource = sourceFolder + 'heightmaps/WAC_GLD100_E000N1800_004P.png';
 
@@ -36,14 +36,14 @@ http://gamingjs.com/ice/#
 
 	var renderer, scene, camera, aboveCam, earthCam;
 	var earth, moonOrbit;
- 
+
 	init();
 	animate();
 
 	function init() {
 
 		var css = document.body.appendChild( document.createElement('style') );
-		css.innerHTML = 'body { background-image: url("http://jaanga.github.io/moon/images/stars-2048x1024.png"); ' +
+		css.innerHTML = 'body { background-image: url("https://jaanga.github.io/moon/images/stars-2048x1024.png"); ' +
 				'font: 12pt monospace; margin: 0; overflow: hidden; }' +
 			'h3 { margin: 0; }' +
 			'#bars, #i { font-size: 24pt; text-decoration: none; }' +
@@ -63,7 +63,7 @@ http://gamingjs.com/ice/#
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; max-width: 200px; ';
 		menu.innerHTML = '<h3>' +
 				'<a href="" >' + document.title + '</a> ' +
-				'<a id=i href=http://jaanga.github.io/moon/voyager/sun-earth-moon/ >&#x24D8;</a>' +
+				'<a id=i href=https://jaanga.github.io/moon/voyager/sun-earth-moon/ >&#x24D8;</a>' +
 			'</h3>' +
 //			'<p><select id=selPlace></select></p>' +
 			'<p id=message >Press spacebar to change camera. P to pause. 1, 2 or 3 to adjust speed.</p>' +
@@ -131,7 +131,7 @@ http://gamingjs.com/ice/#
 		vertices = geometry3D.attributes.position.array;
 
 		material3D = new THREE.MeshPhongMaterial( {
-			color: 0xaaaa99, 
+			color: 0xaaaa99,
 //			emissive: 0xffffff * Math.random(),
 			specular: 0xaa9999,
 			shininess: 10
