--- a/voyager/xxx-basic/moon-voyager-gamer-r1.html
+++ b/voyager/xxx-basic/moon-voyager-gamer-r1.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <!--
-<script src=http://mrdoob.github.io/three.js/build/three.min.js ></script>
-<script src=http://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
-<script src=http://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
+<script src=https://mrdoob.github.io/three.js/build/three.min.js ></script>
+<script src=https://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
+<script src=https://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
 -->
 
-<script src = http://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
-<script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src = https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
 var width = 1024;
@@ -154,8 +154,8 @@ var height = 512;
 
 		mapTypes = [
 			['Default colors',''],
-			['Elevation','http://jaanga.github.io/terrain-r2/images/Elevation.jpg'],
-			['GLOBALeb3colshade','http://jaanga.github.io/terrain-r2/images/GLOBALeb3colshade.jpg']
+			['Elevation','https://jaanga.github.io/terrain-r2/images/Elevation.jpg'],
+			['GLOBALeb3colshade','https://jaanga.github.io/terrain-r2/images/GLOBALeb3colshade.jpg']
 
 //			['world-map-google-satellite','../../../terrain-srtm30-plus-data-tms-1-7/0/world-map-google-satellite.png']
 
